# control-system

./: .gitignore  CMakeLists.txt  README.md  delete.py  run_control_system.sh
include/: actuator.h  coordinator.h  modbus_controler.h  prueba.h  prueba2.h  servo.h  servo_fk.h  tcp_client.h  udp_multicast_client.h
src/: CMakeLists.txt  actuator.cpp  blink_led.cpp  blink_led_m2.cpp  coordinator.cpp  main.cpp  main_actuator.cpp  modbus_controler.cpp  move_servo.cpp  prueba.cpp  prueba2.cpp  servo.cpp  servo_fk.cpp  tcp_client.cpp  udp_multicast_client.cpp
tests/: CMakeLists.txt  test_servo.cpp
